Closed Bug 405659 Opened 17 years ago Closed 17 years ago

Gradient stroke fails to paint on shift+reload

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jwatt, Assigned: longsonr)

References

()

Details

Attachments

(1 file, 1 obsolete file)

On the W3C test http://www.w3.org/Graphics/SVG/Test/20061213/htmlEmbedHarness/full-pservers-grad-11-b.html if I hold down shift and hit reload then the text "Gradient on text stroke" does not paint in the SVG. If I press just reload, it paints fine.

I've seen this sort of weirdness on and off in SVG for a while, so requesting blocking1.9.
Flags: blocking1.9?
Depends on: 404092
Attached patch patch (obsolete) — Splinter Review
I should have reverted this when I implemented fallback colours. Note how the implementation now matches HasFill.
Assignee: nobody → longsonr
Status: NEW → ASSIGNED
Attachment #290483 - Flags: review?(jwatt)
Looks like you made this change to HasStroke already, then backed it out. I need to look closer at the history though.
Blocks: 354295
No longer depends on: 404092
I did make the change originally, now I want to back out the only line left from bug 354295. I should have removed this line as part of bug 264132 when I moved all of the other code in bug 354295 to layout/style. Arguably the HasStroke change was always wrong but it didn't start to be a problem till other changes to covered region processing landed.

The issue is that when the page first loads the URL cannot be resolved to a frame so HasStroke returns false. This results in the text being given no covered region. When the style system eventually updates the page because the URL is now resolvable it refreshes an empty region.
Comment on attachment 290483 [details] [diff] [review]
patch

Ah, I see. It would be nice to have a comment in the source explaining why we check for eStyleSVGPaintType_Server instead of NS_STATE_SVG_STROKE_PSERVER (same for fill).

Can you add a comment before the NS_STATE_SVG_STROKE_PSERVER define in nsSVGUtils.h saying something like "Indicates we have a valid paint server fetchable using GetProperty". (Same for fill.)
Attachment #290483 - Flags: review?(jwatt) → review+
Attachment #290483 - Attachment is obsolete: true
Attachment #290531 - Flags: superreview?(tor)
Attachment #290531 - Flags: superreview?(tor) → superreview+
Attachment #290531 - Flags: approval1.9?
Low risk, a one line change to make HasStroke work like HasFill already does.
Comment on attachment 290531 [details] [diff] [review]
address review comments

a=beltzner for drivers
Attachment #290531 - Flags: approval1.9? → approval1.9+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: blocking1.9?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: