Bug 405659 - Gradient stroke fails to paint on shift+reload. r=jwatt,sr=tor,a1.9=beltzner